# maildir

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: test.yml
examples/: explain.rs
src/: lib.rs
tests/: smoke.rs
