[package]
name = "maildir"
version = "0.5.0"
authors = ["Kartikaya Gupta"]
edition = "2018"
license = "0BSD"

description = "A simple library for maildir manipulation"
homepage = "https://github.com/staktrace/maildir/blob/master/README.md"
repository = "https://github.com/staktrace/maildir"
readme = "README.md"
keywords = ["maildir", "email", "rfc822", "mime"]
categories = ["email", "filesystem"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mailparse = "0.13"
gethostname = "0.2.1"
memmap = { version = "0.7.0", optional = true }

[features]
mmap = ["memmap"]

[dev-dependencies]
tempfile = "3.0.8"
walkdir = "2.2.7"
percent-encoding = "1.0.1"
